Bug 116149 - VAR* and STDEV* functions don't support external references
Summary: VAR* and STDEV* functions don't support external references
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.1.0 target:6.0.3 target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-02 20:26 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2022-03-24 16:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2018-03-02 20:26:45 UTC
The VAR* and STDEV* functions' families don't work with external references.
Comment 1 Commit Notification 2018-03-02 20:48:02 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38b87bbb24c1d1cc088d3d135e7e95b3ec75d386

Resolves: tdf#116149 handle external references in VAR* and STDEV* functions

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2018-03-02 20:58:07 UTC
Pending review https://gerrit.libreoffice.org/50647 for 6-0
Comment 3 Commit Notification 2018-03-15 16:02:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7247d66b3376b37da403acd74ee49f59b8b18a5&h=libreoffice-6-0

Resolves: tdf#116149 handle external references in VAR* and STDEV* functions

It will be available in 6.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-03-24 16:17:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/97d53be544fc32f1da294dde133195c5b10588e9

tdf#116149: sc_uicalc: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.