Resolves: tdf#116149 handle external references in VAR* and STDEV* functions

Change-Id: I644a5f8f92452ca775ee3b42a73d3f0a0ac3c623